--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,12 @@
-name = "Corner"
+name = "CornerPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
-authors = ["William Thompson <will.thompson@outlook.com>"]
+authors = ["William Thompson <wthompson@uvic.ca>"]
 version = "0.1.0"
 
 [deps]
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
