--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,10 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
+[compat]
+Measures = "0.3.1"
+NamedTupleTools = "0.13.7"
+RecipesBase = "1.1.1"
+StatsBase = "0.33.4"
+Tables = "1.4.1"
