--- a/Project.toml
+++ b/Project.toml
@@ -8,14 +8,18 @@ Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
+[extra]
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+
 [compat]
-julia = "1.6.0"
 Measures = "0.3.1"
 NamedTupleTools = "0.13.7"
 RecipesBase = "1.1.1"
 StatsBase = "0.33.4"
 Tables = "1.4.1"
+julia = "1.6.0"
