--- a/Project.toml
+++ b/Project.toml
@@ -4,17 +4,17 @@ authors = ["William Thompson <wthompson@uvic.ca>"]
 version = "0.1.0"
 
 [deps]
+Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
-
-[extra]
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 
 [compat]
 Measures = "0.3.1"
@@ -23,3 +23,9 @@ RecipesBase = "1.1.1"
 StatsBase = "0.33.4"
 Tables = "1.4.1"
 julia = "1.6.0"
+StaticArrays="1.1.0"
+PolygonOps = "0.1.1"
+Contour = "0.5.7"
+
+[extra]
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
