--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
