--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,8 @@ NamedTupleTools = "0.13.7"
 PolygonOps = "0.1.1"
 RecipesBase = "1.1.1"
 Requires = "1.1.3"
-StaticArrays = "1.1.0"
+# StaticArrays = "1.1.0"
+StaticArrays = "0.12.4"
 StatsBase = "0.33.4"
 Tables = "1.4.1"
 julia = "1.6.0"
