--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PairPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 authors = ["William Thompson <wthompson@uvic.ca>"]
-version = "0.2.0"
+version = "0.3.0"
 
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
@@ -17,17 +17,17 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-Contour = "0.5.7"
-Measures = "0.3.1"
-NamedTupleTools = "0.13.7"
-PolygonOps = "0.1.1"
-RecipesBase = "1.1.1"
-Requires = "1.1.3"
+Contour = "^0.5.7"
+Measures = "^0.3.1"
+NamedTupleTools = "^0.13.7"
+PolygonOps = "^0.1.1"
+RecipesBase = "^1.1.1"
+Requires = "^1.1.3"
 # StaticArrays = "1.1.0"
-StaticArrays = "0.12.4"
-StatsBase = "0.33.4"
-Tables = "1.4.1"
-julia = "1.6.0"
+StaticArrays = "^0.12.4"
+StatsBase = "≥ 0.33.4"
+Tables = "^1.4.1"
+julia = "^1.6.0"
 
 [extra]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
