--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ RecipesBase = "^1.1.1"
 Requires = "^1.1.3"
 # StaticArrays = "1.1.0"
 StaticArrays = "^0.12.4"
-StatsBase = "≥ 0.33.4"
+StatsBase = "^0.33.4"
 Tables = "^1.4.1"
 julia = "^1.6.0"
 
