--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ Requires = "^1.1.3"
 # StaticArrays = "1.1.0"
 StaticArrays = "^1.0.0"
 # StatsBase = "^0.33.4"
-StatsBase = "^0.30"
+StatsBase = "0.30 - 0.33"
 Tables = "^1.4.1"
 julia = "^1.6.0"
 
