--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "PairPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 authors = ["William Thompson <wthompson@uvic.ca>"]
-version = "0.5.2"
+version = "0.5.3"
 
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
+Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
@@ -18,16 +19,16 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-Contour = "^0.5.7"
-Measures = "^0.3.1"
-NamedTupleTools = "^0.13.7"
-PolygonOps = "^0.1.1"
-RecipesBase = "^1.1.1"
-Requires = "^1.1.3"
-StaticArrays = "^1.0.0"
-StatsBase = "0.30 - 0.33"
-Tables = "^1.4.1"
-julia = "^1.6.0"
+Contour = "0.5.7"
+Measures = "0.3.1"
+NamedTupleTools = "0.13.7"
+PolygonOps = "0.1.1"
+RecipesBase = "1"
+Requires = "1"
+StaticArrays = "1.0.0"
+StatsBase = "0.32 - 0.33"
+Tables = "1.4.1"
+julia = "1.6.0"
 
 [extra]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
