--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,6 @@ Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -22,6 +21,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Contour = "0.5.7"
 Measures = "0.3.1"
 NamedTupleTools = "0.13.7"
+Latexify = "0.15"
 PolygonOps = "0.1.1"
 RecipesBase = "1"
 Requires = "1"
