--- a/Project.toml
+++ b/Project.toml
@@ -6,8 +6,10 @@ version = "0.6.0"
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
@@ -19,9 +21,9 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 Contour = "0.5.7"
+Latexify = "0.15"
 Measures = "0.3.1"
 NamedTupleTools = "0.13.7"
-Latexify = "0.15"
 PolygonOps = "0.1.1"
 RecipesBase = "1"
 Requires = "1"
