--- a/Project.toml
+++ b/Project.toml
@@ -6,15 +6,16 @@ version = "0.6.0"
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
-OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
