--- a/Project.toml
+++ b/Project.toml
@@ -23,22 +23,22 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-Contour = "0.5.7"
+Contour = "0.5.7, 0.6"
+Distributions = "0.25"
+KernelDensity = "0.6"
 Latexify = "0.15"
+Makie = "0.19"
 Measures = "0.3.1"
 NamedTupleTools = "0.13.7"
+OrderedCollections = "1.4"
 PolygonOps = "0.1.1"
 RecipesBase = "1"
 Requires = "1"
+SnoopPrecompile = "1.0"
 StaticArrays = "1.0.0"
 StatsBase = "0.32 - 0.33"
 Tables = "1.4.1"
 julia = "1.7.0"
-Distributions = "0.25"
-KernelDensity = "0.6"
-Makie = "0.19"
-OrderedCollections = "1.4"
-SnoopPrecompile = "1.0"
 
 [extra]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
