--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,19 @@ KernelDensity = "0.6"
 Makie = "0.19"
 OrderedCollections = "1.4"
 SnoopPrecompile = "1.0"
+MCMCChains = "5.0"
 
-[extra]
+
+
+[weakdeps]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[extras]
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+
+
+[extensions]
+# name of extension to the left
+# extension dependencies required to load the extension to the right
+# use a list for multiple extension dependencies
+MCMCChainsExt = "MCMCChains" 
