--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,5 +2,6 @@
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
