--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
@@ -22,36 +23,30 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
+[weakdeps]
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+
+[extensions]
+MCMCChainsExt = "MCMCChains"
+
 [compat]
 Contour = "0.6"
+Distributions = "0.25"
+KernelDensity = "0.6"
 Latexify = "0.15"
+MCMCChains = "5.0"
+Makie = "0.19"
 Measures = "0.3.1"
 NamedTupleTools = "0.14"
+OrderedCollections = "1.4"
 PolygonOps = "0.1.1"
 RecipesBase = "1"
 Requires = "1"
+SnoopPrecompile = "1.0"
 StaticArrays = "1.0.0"
 StatsBase = "0.32 - 0.33"
 Tables = "1.4.1"
 julia = "1.7.0"
-Distributions = "0.25"
-KernelDensity = "0.6"
-Makie = "0.19"
-OrderedCollections = "1.4"
-SnoopPrecompile = "1.0"
-MCMCChains = "5.0"
-
-
-
-[weakdeps]
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 
 [extras]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
-
-
-[extensions]
-# name of extension to the left
-# extension dependencies required to load the extension to the right
-# use a list for multiple extension dependencies
-MCMCChainsExt = "MCMCChains" 
