Support newer versions of MCMCChains

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PairPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 authors = ["William Thompson <wthompson@uvic.ca>"]
-version = "1.0.1"
+version = "1.0.2"
 
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
@@ -34,7 +34,7 @@ Contour = "0.6"
 Distributions = "0.25"
 KernelDensity = "0.6"
 Latexify = "0.15"
-MCMCChains = "5.0"
+MCMCChains = "5.0, 6.0"
 Makie = "0.19"
 Measures = "0.3.1"
 NamedTupleTools = "0.14"
