--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
-SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -36,7 +36,7 @@ OrderedCollections = "1.4"
 PolygonOps = "0.1.1"
 RecipesBase = "1"
 Requires = "1"
-SnoopPrecompile = "1.0"
+PrecompileTools = "1.0"
 StaticArrays = "1.0.0"
 StatsBase = "0.32 - 0.33"
 Tables = "1.4.1"
