--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,12 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
+[weakdeps]
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+
+[extensions]
+MCMCChainsExt = "MCMCChains"
+
 [compat]
 Contour = "0.6"
 Distributions = "0.25"
@@ -38,15 +44,10 @@ PrecompileTools = "1.0"
 RecipesBase = "1"
 Requires = "1"
 StaticArrays = "1.0.0"
+Statistics = "1"
 StatsBase = "0.32 - 0.33, 0.34"
 Tables = "1.4.1"
 julia = "1.7.0"
 
-[extensions]
-MCMCChainsExt = "MCMCChains"
-
 [extras]
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
-
-[weakdeps]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
