CompatHelper: bump compat for Makie to 0.20, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -34,13 +34,15 @@ Contour = "0.6"
 Distributions = "0.25"
 KernelDensity = "0.6"
 Latexify = "0.15, 0.16"
+LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
-Makie = "0.19"
+Makie = "0.19, 0.20"
 Measures = "0.3.1"
 NamedTupleTools = "0.14"
 OrderedCollections = "1.4"
 PolygonOps = "0.1.1"
 PrecompileTools = "1.0"
+Printf = "1"
 RecipesBase = "1"
 Requires = "1"
 StaticArrays = "1.0.0"
@@ -48,8 +50,6 @@ Statistics = "1"
 StatsBase = "0.32 - 0.33, 0.34"
 Tables = "1.4.1"
 julia = "1.7.0"
-LinearAlgebra = "1"
-Printf = "1"
 
 [extras]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
