--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,13 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+DynamicQuantities = "06fc5a27-2a28-4c7c-a15d-362465fb6821"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extensions]
 MCMCChainsExt = "MCMCChains"
+PairPlotsDynamicQuantitiesExt = "DynamicQuantities"
+PairPlotsDynamicUnitfulExt = "Unitful"
 
 [compat]
 Contour = "0.6"
