--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,6 @@ version = "2.1.0"
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
-Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
@@ -27,15 +26,18 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+DynamicQuantities = "06fc5a27-2a28-4c7c-a15d-362465fb6821"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extensions]
 MCMCChainsExt = "MCMCChains"
+PairPlotsDynamicQuantitiesExt = "DynamicQuantities"
+PairPlotsDynamicUnitfulExt = "Unitful"
 
 [compat]
 Contour = "0.6"
 Distributions = "0.25"
 KernelDensity = "0.6"
-Latexify = "0.15, 0.16"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
 Makie = "0.20"
