--- a/Project.toml
+++ b/Project.toml
@@ -25,8 +25,8 @@ TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 DynamicQuantities = "06fc5a27-2a28-4c7c-a15d-362465fb6821"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [extensions]
@@ -52,6 +52,7 @@ Requires = "1"
 StaticArrays = "1.0.0"
 Statistics = "1"
 StatsBase = "0.32 - 0.33, 0.34"
+TableOperations = "1"
 Tables = "1.4.1"
 julia = "1.7.0"
 
