--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,3 +5,4 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
