--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,13 @@
 name = "PairPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 authors = ["William Thompson <wthompson@uvic.ca>"]
-version = "2.7.0"
+version = "2.7.1"
 
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearAlgebra = "372e46d-f89d-539d-b4ee-838fcccc9c8e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Missings = "e1d29d7a-bbdc-5cf2-9ac0-f12de2c33e28"
