--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Distributions = "0.25"
 KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
-Makie = "0.20"
+Makie = "0.20, 0.21"
 Measures = "0.3.1"
 Missings = "1"
 NamedTupleTools = "0.14"
