--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PairPlots"
 uuid = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 authors = ["William Thompson <wthompson@uvic.ca>"]
-version = "2.7.2"
+version = "2.7.3"
 
 [deps]
 Contour = "d38c429a-6771-53c6-b99e-75d170b6e991"
@@ -40,7 +40,7 @@ Distributions = "0.25"
 KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
-Makie = "0.20"
+Makie = "0.20, 0.21"
 Measures = "0.3.1"
 Missings = "1"
 NamedTupleTools = "0.14"
