--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ Statistics = "1"
 StatsBase = "0.32 - 0.33, 0.34"
 TableOperations = "1"
 Tables = "1.4.1"
+Unitful = "1"
 julia = "1.7.0"
 
 [extras]
