CompatHelper: add new compat entry for DynamicQuantities in [weakdeps] at version 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -37,6 +37,7 @@ PairPlotsDynamicUnitfulExt = "Unitful"
 [compat]
 Contour = "0.6"
 Distributions = "0.25"
+DynamicQuantities = "0.14"
 KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
