--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ PairPlotsDynamicUnitfulExt = "Unitful"
 [compat]
 Contour = "0.6"
 Distributions = "0.25"
-DynamicQuantities = "0.14"
+DynamicQuantities = "0.14, 1"
 KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
@@ -58,6 +58,6 @@ Unitful = "1"
 julia = "1.7.0"
 
 [extras]
-MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 DynamicQuantities = "06fc5a27-2a28-4c7c-a15d-362465fb6821"
+MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
