--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
 MCMCDiagnosticTools = "0.3"
-Makie = "0.20, 0.21"
+Makie = "0.21.18"
 Measures = "0.3.1"
 Missings = "1"
 NamedTupleTools = "0.14"
@@ -57,7 +57,7 @@ StatsBase = "0.32 - 0.33, 0.34"
 TableOperations = "1"
 Tables = "1.4.1"
 Unitful = "1"
-julia = "1.7.0"
+julia = "1.10.0"
 
 [extras]
 DynamicQuantities = "06fc5a27-2a28-4c7c-a15d-362465fb6821"
