CompatHelper: bump compat for Makie to 0.22, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0"
 MCMCDiagnosticTools = "0.3"
-Makie = "0.21.18"
+Makie = "0.21.18, 0.22"
 Measures = "0.3.1"
 Missings = "1"
 NamedTupleTools = "0.14"
