CompatHelper: bump compat for MCMCChains in [weakdeps] to 7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Distributions = "0.25"
 DynamicQuantities = "0.14, 1"
 KernelDensity = "0.6"
 LinearAlgebra = "1"
-MCMCChains = "5.0, 6.0"
+MCMCChains = "5.0, 6.0, 7"
 MCMCDiagnosticTools = "0.3"
 Makie = "0.21.18, 0.22"
 Measures = "0.3.1"
