--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ KernelDensity = "0.6"
 LinearAlgebra = "1"
 MCMCChains = "5.0, 6.0, 7"
 MCMCDiagnosticTools = "0.3"
-Makie = "0.21.18, 0.22, 0.23"
+Makie = "0.21.18, 0.22, 0.23, 0.24"
 Measures = "0.3.1"
 Missings = "1"
 NamedTupleTools = "0.14"
